--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
  
 <body>
-  <h1>YOUR NAME</h1>
+  <h1>Huu-Duc Huynh</h1>
   <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="https://www.facebook.com/photo/?fbid=2127875434041284&set=a.106079882887526" />
 </body>
  
 </html>
