--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
  
 <body>
   <h1>Huu-Duc Huynh</h1>
+  <h2>Email: duc8897@gmail.com<h2>
+  <br>
   <p>Welcome to my website!</p>
-  <img src="https://www.facebook.com/photo/?fbid=2127875434041284&set=a.106079882887526" />
+  <img src="https://img.haikudeck.com/mg/liN3bwG1kM_1410540834252.jpg" />
 </body>
  
 </html>
