--- a/AreaSelection.html
+++ b/AreaSelection.html
@@ -13,7 +13,7 @@
   
   <h2>Chọn đơn vị tổ chức hoạt động<h2>
    
-   /* IEC */
+   <!-- IEC -->
   <div class="form-check">
   <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
   <label class="form-check-label" for="flexRadioDefault1">
@@ -21,7 +21,7 @@
   </label>
   </div>
     
-  /* DCK */
+   <!-- DCK -->
   <div class="form-check">
   <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
   <label class="form-check-label" for="flexRadioDefault1">
