--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <h2>Email: duc8897@gmail.com<h2>
   <br>
   <p>Welcome to my website!</p>
-  <strong><a href="AreaSelection.html">Tạo một hoạt động</a></strong><br>
+  <strong><a href="AreaSelection.html">Tạo một hoạt động</a></strong>
+  <strong><a href="FormFieldSelection.html">Tạo một hoạt động</a></strong>
+   <br><br><br>
   <img src="https://img.haikudeck.com/mg/liN3bwG1kM_1410540834252.jpg" />
 </body>
  
