--- a/FormFieldSelection.html
+++ b/FormFieldSelection.html
@@ -12,11 +12,9 @@
 
   
 <body>
-  
-  <h2>Chọn các field cần có trong form đăng ký<h2>
 
 
-<label for="exampleDataList" class="form-label">Datalist example</label>
+<label for="exampleDataList" class="form-label">Chọn các field cần có trong form đăng ký</label>
 <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
 <datalist id="datalistOptions">
   <option value="Họ và tên">
