--- a/AreaSelection.html
+++ b/AreaSelection.html
@@ -13,7 +13,12 @@
   
 <body>
   
-  <h2>Chọn đơn vị tổ chức hoạt động<h2>
+  <!-- Block level -->
+  <div class="row">
+    <div class="col-2 text-truncate">
+      Chọn đơn vị tổ chức hoạt động
+    </div>
+  </div>
    
    <!-- IEC -->
   <div class="form-check">
@@ -34,14 +39,20 @@
   <br><br>
    
   <!-- Form's Fields Selection -->
-  <label for="exampleDataList" class="form-label">Chọn các field cần có trong form đăng ký</label>
-  <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
-  <datalist id="datalistOptions">
-    <option value="Họ và tên">
-    <option value="MSSV">
-    <option value="Ngành">
-    <option value="Khoa">
-  </datalist>
+  <!-- Block level -->
+  <div class="row">
+    <div class="col-2 text-truncate">
+      <label for="exampleDataList" class="form-label">Chọn các field cần có trong form đăng ký</label>
+          <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
+          <datalist id="datalistOptions">
+            <option value="Họ và tên">
+            <option value="MSSV">
+            <option value="Ngành">
+            <option value="Khoa">
+          </datalist>
+    </div>
+  </div>
+  
   <br><br>
     
   <!-- Submit -->
