--- a/AreaSelection.html
+++ b/AreaSelection.html
@@ -15,7 +15,7 @@
   
   <!-- Block level -->
   <div class="row">
-    <div class="col-2">
+    <div class="col">
       Chọn đơn vị tổ chức hoạt động
     </div>
   </div>
@@ -41,7 +41,7 @@
   <!-- Form's Fields Selection -->
   <!-- Block level -->
   <div class="row">
-    <div class="col-2">
+    <div class="col">
       <label for="exampleDataList" class="form-label">Chọn các field cần có trong form đăng ký</label>
           <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
           <datalist id="datalistOptions">
