--- a/AreaSelection.html
+++ b/AreaSelection.html
@@ -12,6 +12,7 @@
 
   
 <body>
+  <div class="container">
   
   <!-- Block level -->
   <div class="row">
@@ -68,7 +69,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
    
-    
+  </div>  
 </body>
 
 </html>
