--- a/AreaSelection.html
+++ b/AreaSelection.html
@@ -43,9 +43,9 @@
   <!-- Block level -->
   <div class="row">
     <div class="col">
-      <label for="exampleDataList" class="form-label">Chọn các field cần có trong form đăng ký</label>
-          <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
-          <datalist id="datalistOptions">
+      <label for="FieldDataList" class="form-label">Chọn các field cần có trong form đăng ký</label>
+          <input class="form-control" list="FieldOptions" id="FieldDataList" placeholder="Type to search...">
+          <datalist id="FieldOptions">
             <option value="Họ và tên">
             <option value="MSSV">
             <option value="Ngành">
@@ -59,9 +59,9 @@
   <!-- Block level -->
   <div class="row">
     <div class="col">
-      <label for="exampleDataList" class="form-label">Tên diễn giả (nếu có)</label>
-          <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
-          <datalist id="datalistOptions">
+      <label for="SpeakerDataList" class="form-label">Tên diễn giả (nếu có)</label>
+          <input class="form-control" list="SpeakerOptions" id="SpeakerDataList" placeholder="Type to search...">
+          <datalist id="SpeakerOptions">
             <option value="Đỗ Ngọc Hiền">
             <option value="Lê Ngọc Quỳnh Lam">
             <!--- Tích hợp DB diễn giả vào đây -->
@@ -69,7 +69,7 @@
     </div>
   </div>
     
-  (br><br>
+  <br><br>
     
   <!-- Submit -->
   <!-- <a href="FormFieldSelection.html"> -->
