--- a/AreaSelection.html
+++ b/AreaSelection.html
@@ -25,7 +25,7 @@
   <div class="form-check">
   <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
   <label class="form-check-label" for="flexRadioDefault1">
-    IEC
+    IE Connect
   </label>
   </div>
     
