--- a/AreaSelection.html
+++ b/AreaSelection.html
@@ -10,6 +10,9 @@
   <title>Student Activities Portal - AREA SELECTION</title>
 </head>
 
+<header>
+    <h1>THÔNG TIN SỰ KIỆN</h1>
+</header>
   
 <body>
   <div class="container">
