--- a/SAP.html
+++ b/SAP.html
@@ -7,7 +7,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   
-  <title>Student Activities Portal - AREA SELECTION</title>
+  <title>Student Activities Portal by Huu-Duc Huynh ISE</title>
 </head>
 
 <header>
