--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <h2>Email: duc8897@gmail.com<h2>
   <br>
   <p>Welcome to my website!</p>
-  <strong><a href="AreaSelection.html">Tạo một hoạt động</a></strong>
+  <br><br><br>
+  <h2><em>My products</em><h2>
+  <br><br><br>
+  <strong><a href="AreaSelection.html">--- STUDENT ACTIVITIES PORTAL ---</a></strong>
    <br><br><br>
   <img src="https://img.haikudeck.com/mg/liN3bwG1kM_1410540834252.jpg" />
 </body>
