--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <br><br><br>
   <h2><em>My products</em><h2>
   <br><br><br>
-  <strong><a href="AreaSelection.html">--- STUDENT ACTIVITIES PORTAL ---</a></strong>
+  <strong><a href="SAP.html">--- STUDENT ACTIVITIES PORTAL ---</a></strong>
    <br><br><br>
   <img src="https://img.haikudeck.com/mg/liN3bwG1kM_1410540834252.jpg" />
 </body>
