--- a/SAP.html
+++ b/SAP.html
@@ -7,7 +7,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   
-  <title>Student Activities Portal by Huu-Duc Huynh ISE</title>
+  <title>Student Activities Portal by Huu-Duc Huynh ISE - Homepage</title>
 </head>
 
 <header>
@@ -19,6 +19,16 @@
 <body>
   <div class="container">
   
+   <!-- Nhập tên hoạt động -->
+   <div class="row">
+    <div class="col">
+        <div class="form-group">
+          <label for="eventName">TÊN HOẠT ĐỘNG</label>
+          <textarea class="form-control" rows="5" id="eventName"></textarea>
+        </div>
+     </div>
+    </div>
+    
   <!-- Block level -->
   <div class="row">
     <div class="col">
