--- a/SAP.html
+++ b/SAP.html
@@ -58,7 +58,7 @@
  <!-- OnlineRadio -->
   <div class="row">
     <div class="col">
-      Chọn đơn vị tổ chức hoạt động
+      Chọn hình thức tổ chức hoạt động
       <!-- Online -->
           <div class="form-check">
             <input class="form-check-input" type="radio" name="Area" id="AreaRadio">
