--- a/SAP.html
+++ b/SAP.html
@@ -27,7 +27,7 @@
    <div class="row">
     <div class="col">
         <div class="form-group">
-          <label for="eventName">TÊN HOẠT ĐỘNG</label>
+          <label for="eventName"><strong>TÊN HOẠT ĐỘNG</strong></label>
           <textarea class="form-control" rows="5" id="eventName"></textarea>
         </div>
      </div>
@@ -38,7 +38,7 @@
   <!-- AreaRadio -->
   <div class="row">
     <div class="col">
-      Chọn đơn vị tổ chức hoạt động
+      <strong>Chọn đơn vị tổ chức hoạt động</strong>
       <!-- IEC -->
           <div class="form-check">
             <input class="form-check-input" type="radio" name="Area" id="AreaRadio">
@@ -62,7 +62,7 @@
  <!-- OnlineRadio -->
   <div class="row">
     <div class="col">
-      Chọn hình thức tổ chức hoạt động
+      <strong>Chọn hình thức tổ chức hoạt động</strong>
       <!-- Online -->
           <div class="form-check">
             <input class="form-check-input" type="radio" name="Area" id="AreaRadio">
@@ -87,7 +87,7 @@
   <!-- Block level -->
   <div class="row">
     <div class="col">
-      <label for="FieldDataList" class="form-label">Chọn các field cần có trong form đăng ký</label>
+      <label for="FieldDataList" class="form-label"><strong>Chọn các field cần có trong form đăng ký</strong></label>
           <input class="form-control" list="FieldOptions" id="FieldDataList" placeholder="Type to search...">
           <datalist id="FieldOptions">
             <option value="Họ và tên">
@@ -103,7 +103,7 @@
   <!-- Block level -->
   <div class="row">
     <div class="col">
-      <label for="SpeakerDataList" class="form-label">Tên diễn giả (nếu có)</label>
+      <label for="SpeakerDataList" class="form-label"><strong>Tên diễn giả (nếu có)</strong></label>
           <input class="form-control" list="SpeakerOptions" id="SpeakerDataList" placeholder="Type to search...">
           <datalist id="SpeakerOptions">
             <option value="Đỗ Ngọc Hiền">
