--- a/index.html
+++ b/index.html
@@ -1,16 +1,47 @@
 <html>
  
-<body>
-  <h1>Huu-Duc Huynh</h1>
-  <h2>Email: duc8897@gmail.com<h2>
-  <br>
-  <p>Welcome to my website!</p>
-  <br><br><br>
-  <h2><em>My products</em><h2>
-  <br><br><br>
-  <strong><a href="SAP.html">--- STUDENT ACTIVITIES PORTAL ---</a></strong>
-   <br><br><br>
-  <img src="https://img.haikudeck.com/mg/liN3bwG1kM_1410540834252.jpg" />
+<head> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="background-animation.css">
+  
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  
+  <title>Space of Huu-Duc Huynh</title>
+ 
+ </head>
+ 
+ <header>
+  <div class="p-5 text-center bg-light">
+    <h1>Welcome to my website!</h1>
+  </div>
+</header>
+ 
+ <body>
+  
+  <div class="bg"></div>
+  <div class="bg bg2"></div>
+  <div class="bg bg3"></div>
+  <div class="container">
+    
+   <!-- Audio --> 
+   <audio autoplay loop>
+       <source src="your-audio-file.wav" type="audio/wav" />
+    </audio>
+   <!-- end audio -->
+   
+    <h2>HUU-DUC HUYNH</h2>
+    <h2>Email: duc8897@gmail.com<h2>
+    <br>
+    <br><br><br>
+    <h2><em>My products</em><h2>
+    <br>
+    <strong><a href="SAP.html">--- STUDENT ACTIVITIES PORTAL ---</a></strong>
+     <br><br><br>
+    <img src="https://img.haikudeck.com/mg/liN3bwG1kM_1410540834252.jpg" />
+  </div>
+   
 </body>
  
 </html>
