--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
     
    <!-- Audio --> 
    <audio autoplay loop>
-       <source src="your-audio-file.wav" type="audio/wav" />
+       <source src="Thái Trinh - Phố Xa (Official Music Video).mp3" type="audio/mpeg" />
     </audio>
-   <!-- end audio -->
    
     <h2>HUU-DUC HUYNH</h2>
     <h2>Email: duc8897@gmail.com<h2>
