--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
  </head>
  
  <header>
-   <!-- Audio --> 
-   <audio autoplay loop>
-       <source src="Thái Trinh - Phố Xa (Official Music Video).mp3" type="audio/mpeg" />
-    </audio>
   <div class="p-5 text-center bg-light">
     <h1>Welcome to my website!</h1>
   </div>
 </header>
  
  <body>
+  
+  <!-- Audio --> 
+   <audio autoplay loop>
+       <source src="Thái Trinh - Phố Xa (Official Music Video).mp3" type="audio/mpeg" />
+    </audio>
   
   <div class="bg"></div>
   <div class="bg bg2"></div>
@@ -37,7 +38,7 @@
     <br>
     
     <div class="list-group">
-        <a href="SAP.html" class="list-group-item list-group-item-action flex-column align-items-start active">
+        <a href="SAP.html" class="list-group-item list-group-item-action flex-column align-items-start active" target="_blank">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">STUDENT ACTIVITIES PORTAL</h5>
           </div>
