--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  <body>
   
   <!-- Audio --> 
-   <audio autoplay loop>
+   <audio autoplay loop controls>
        <source src="Thái Trinh - Phố Xa (Official Music Video).mp3" type="audio/mpeg" />
     </audio>
   
