--- a/SAP.html
+++ b/SAP.html
@@ -23,7 +23,7 @@
   <div class="bg bg3"></div>
   <div class="container">
   
-  <form method="post" action="StudentRegisterForm.php">
+  <form method="post" action="ActivityInfo.php">
     
    <!-- Nhập tên hoạt động -->
    <div class="row">
@@ -84,7 +84,8 @@
   </div>
   
   <br><br>
-   
+  
+  <!--
   <!-- Form's Fields Selection -->
   <!-- Block level -->
     <div class="row">
@@ -123,9 +124,9 @@
       </div>
  </div>
   
-  <br><br>
+  <br><br> -->
     
-  <!-- Block level -->
+  <!-- Speakers -->
   <div class="row">
     <div class="col">
       <label for="SpeakerDataList" class="form-label"><strong>Tên diễn giả (nếu có)</strong></label>
