--- a/SAP.html
+++ b/SAP.html
@@ -23,13 +23,15 @@
   <div class="bg bg3"></div>
   <div class="container">
   
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <!-- Menu -->
+    
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="#">Student Activities Portal</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <!-- Menu -->
+    
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
