--- a/SAP.html
+++ b/SAP.html
@@ -44,7 +44,7 @@
     <div class="position-relative">
     <div class="row"><div class="col">
     <div class="p-5 text-center bg-light">
-      <h1>THÔNG TIN HOẠT ĐỘNG</h1>
+      <h1 style="top:10px;">THÔNG TIN HOẠT ĐỘNG</h1>
     </div>
     </div></div>
     </div>
