--- a/SAP.html
+++ b/SAP.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="SAP.html">Thông tin hoạt động <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Speakers.php">Diễn giả</a>
+            <a class="nav-link" href="Speakers.html">Diễn giả</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
